--- a/lab/lab03/SimpleMyDot/app/src/main/res/values/strings.xml
+++ b/lab/lab03/SimpleMyDot/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SimpleMyDot</string>
     <string name="random_dot">Random The Dot!</string>
     <string name="clear_dot">Clear All Dot!</string>
+    <string name="undo_dot">Undo!</string>
 </resources>
